[gd_scene load_steps=5 format=2]

[ext_resource path="res://src/Actors/Player/BossWeapons/GaeaShield/GaeaShield.gd" type="Script" id=1]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [],
"loop": true,
"name": "default",
"speed": 8.0
}, {
"frames": [],
"loop": false,
"name": "break",
"speed": 12.0
} ]

[sub_resource type="SpriteFrames" id=2]
animations = [ {
"frames": [],
"loop": true,
"name": "default",
"speed": 8.0
} ]

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 14, 18 )

[node name="GaeaShield" type="Node2D"]
script = ExtResource( 1 )
duration = 12.0
max_hits = 3
orbit_speed = 4.0
orbit_radius = 24.0

[node name="back_shield" type="AnimatedSprite" parent="."]
z_index = -1
frames = SubResource( 2 )
playing = true

[node name="front_shield" type="AnimatedSprite" parent="."]
z_index = 1
frames = SubResource( 1 )
playing = true

[node name="area2D" type="Area2D" parent="."]
collision_layer = 4
collision_mask = 2

[node name="collisionShape2D" type="CollisionShape2D" parent="area2D"]
shape = SubResource( 3 )

[connection signal="body_entered" from="area2D" to="." method="_on_area2D_body_entered"]
